Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/Trailblazer_Profile__c.object-meta.xml
<CustomObject>
    <label>Trailblazer Profile</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Trailblazer Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailblazer Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>