Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Current platform level based on XP total.</inlineHelpText>
    <label>Current Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>