Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Current_Rank__c.field-meta.xml
<CustomField>
    <fullName>Current_Rank__c</fullName>
    <inlineHelpText>Your current Trailhead rank, synced from Trailhead API.</inlineHelpText>
    <label>Current Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scout</fullName>
                <default>true</default>
                <label>Scout</label>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Mountaineer</fullName>
            </value>
            <value>
                <fullName>Expeditioner</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>Double Star Ranger</fullName>
            </value>
            <value>
                <fullName>Triple Star Ranger</fullName>
            </value>
            <value>
                <fullName>Four Star Ranger</fullName>
            </value>
            <value>
                <fullName>Five Star Ranger</fullName>
            </value>
            <value>
                <fullName>All Star Ranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>