Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Current_Streak__c.field-meta.xml
<CustomField>
    <fullName>Current_Streak__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Consecutive days with qualifying learning activity.</inlineHelpText>
    <label>Current Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>