Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Last_Badge_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Badge_Date__c</fullName>
    <inlineHelpText>Date the most recent badge was earned.</inlineHelpText>
    <label>Last Badge Date</label>
    <type>Date</type>
</CustomField>