Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <inlineHelpText>Timestamp of the last successful Trailhead API sync.</inlineHelpText>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>