Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Longest_Streak__c.field-meta.xml
<CustomField>
    <fullName>Longest_Streak__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Your all-time longest learning streak in days.</inlineHelpText>
    <label>Longest Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>