Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Total_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total badges earned on Trailhead.</inlineHelpText>
    <label>Total Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>