Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cumulative Trailhead points synced from your public profile.</inlineHelpText>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>