Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Total_Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Total_Superbadges__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of superbadges earned on Trailhead.</inlineHelpText>
    <label>Total Superbadges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>