Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Trailhead_Id__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce User ID from your Trailhead public profile URL.</inlineHelpText>
    <label>Trailhead Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>