Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/Trailhead_Username__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Username__c</fullName>
    <inlineHelpText>Your Trailhead username as shown on your public profile.</inlineHelpText>
    <label>Trailhead Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>