Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/fields/XP_Total__c.field-meta.xml
<CustomField>
    <fullName>XP_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total internal XP earned across all platform actions.</inlineHelpText>
    <label>XP Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>