Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/listViews/All_Trailblazers.listView-meta.xml
<ListView>
    <fullName>All_Trailblazers</fullName>
    <columns>Current_Rank__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Total_Badges__c</columns>
    <columns>Current_Streak__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trailblazers</label>
</ListView>