Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/listViews/My_Profile.listView-meta.xml
<ListView>
    <fullName>My_Profile</fullName>
    <columns>Current_Rank__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Total_Badges__c</columns>
    <columns>Current_Streak__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Profile</label>
</ListView>