Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Trailblazer_Profile__c/listViews/Top_Streaks.listView-meta.xml
<ListView>
    <fullName>Top_Streaks</fullName>
    <columns>Current_Rank__c</columns>
    <columns>Current_Streak__c</columns>
    <columns>Longest_Streak__c</columns>
    <filterScope>Everything</filterScope>
    <label>Top Streaks</label>
</ListView>